package W02.task2;

public abstract class Item {
    protected String color;

    public abstract int getRank();

}
