package W02.task2;

public interface Sorter {

    public void loadData(int[] items);

    public void sort();

    public String[] getProcess();

}