@startuml


class ColorMap {
    Map colorMap

    getColors()
    getRank()
}

class Line {
    Position[] positions

    put()
    getPostions()
    getItems()
}

class Position {
    Item item
}

abstract class Item {
    String color

    getRank()
}

class LittleDevil {
    setColor()
}

interface Sorter {
    load()
    sort()
    getPlan()
}

class SelectSort {
    int[] nums
    ArrayList process

    swap()
}

class QuickSort {
    int[] nums
    ArrayList process

    swap()
    quickSort()
}

class Snake {
    Sorter sorter
    String sortLog

    setSorter()
    sortLine()
    getSortLog()
    swapPosition()
}

SelectSort ..|> Sorter

QuickSort ..|> Sorter

Snake --> Sorter

Snake ..> Line

Line ..> Item

Position --o Line

Position --> Item

LittleDevil --|> Item

@enduml